--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
+  color: var(--black);
+  background-color: #f5f5f8;
 }
 
 a {
@@ -23,4 +24,16 @@ a {
     color: white;
     background: black;
   }
+}
+
+:root{
+  --black: #3B434E;
+	--gray-light: #EBEBEB;
+	--white: #fff;
+	--primary: #7653FC;
+	--primary-hover: #6344df;
+	--red: #FC836D;
+	--green: #1DC37E;
+	--green-light: #C8F8E4;
+	--font-family: 'Noto Sans', sans-serif;
 }
